--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
 </head>
 <body>
     <header>
-        
+        <div class="navbar">
+            <div class="logo">
+                <span>
+                    <p>Grocery Store</p>
+                </span>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#home">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#vegetables">
+                            Vegetables
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#fruits">
+                            Fruits
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="search">
+                <input type="text" 
+                       placeholder="Search products...">
+                <button>Search</button>
+            </div>
+        </div>
     </header>
 </body>
 </html>
