--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                             Fruits
                         </a>
                     </li>
+                    <li>
+                        <a href="#abc">
+                            abc
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="search">
