--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                        placeholder="Search products...">
                 <button>Search</button>
             </div>
+            <div class="user">
+                <button>user</button>
+            </div>
         </div>
     </header>
 </body>
