--- a/index.html
+++ b/index.html
@@ -14,38 +14,31 @@
                     <p>Grocery Store</p>
                 </span>
             </div>
+
             <nav>
                 <ul>
-                    <li>
-                        <a href="#home">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#vegetables">
-                            Vegetables
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#fruits">
-                            Fruits
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#abc">
-                            abc
-                        </a>
-                    </li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#vegetables">Vegetables</a></li>
+                    <li><a href="#fruits">Fruits</a></li>
+                    <li><a href="#abc">ABC</a></li>
                 </ul>
             </nav>
+
             <div class="search">
-                <input type="text" 
-                       placeholder="Search products...">
+                <input type="text" placeholder="Search products...">
                 <button>Search</button>
             </div>
-            <div class="user">
-                <button>user</button>
+
+            <!-- User Profile Logo -->
+            <div class="user-profile">
+                <div class="profile-logo">
+                    <div class="user-icon">
+                        <img src="https://via.placeholder.com/80" alt="User Icon">
+                    </div>
+                    <div class="store-background"></div>
+                </div>
             </div>
+
         </div>
     </header>
 </body>
