--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
                     <div class="store-background"></div>
                 </div>
             </div>
-
         </div>
     </header>
+
+    <footer>
+        <p>&copy; 2023 Grocery Store.
+            All rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
